[gd_scene load_steps=3 format=2]

[ext_resource path="res://Rainbow/RainbowRay.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
resource_local_to_scene = true
extents = Vector2( 489.39, 28.7166 )

[node name="RainbowRay" type="Area2D"]
script = ExtResource( 1 )

[node name="Color" type="ColorRect" parent="."]
margin_top = -27.0
margin_right = 487.0
margin_bottom = 25.0
color = Color( 0.372549, 0.388235, 0.752941, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RayArea" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
[connection signal="body_entered" from="." to="." method="_on_RainbowRay_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_RainbowRay_body_exited"]
